health search started

--- a/themes/default/common/footer.html
+++ b/themes/default/common/footer.html
@@ -5,10 +5,22 @@
 	<script type="text/javascript" src="{{ app.url }}/themes/{{ app.theme }}/assets/libs/bts/js/bootstrap.min.js"></script>
 
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/moment.min.js"></script>
+
+	<!-- DATA TABLES -->
+	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/dataTables.min.js"></script>
+	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/dataTables.bootstrap4.min.js"></script>
+
+	<!-- DATE TIME -->
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/tempusdominus-bootstrap-4.min.js"></script>
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/bootstrap-toggle.min.js"></script>
+
+	<!-- ALERTIFY -->
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/alertify.min.js"></script>
+
+	<!-- SELECT -->
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/bootstrap-select.min.js"></script>
+
+	<!-- LOCAL -->
 	<script src="{{ app.url }}/themes/{{ app.theme }}/assets/js/core.js"></script>
 
 	{% for script in scripts %}
