--- a/themes/default/common/header.html
+++ b/themes/default/common/header.html
@@ -17,6 +17,9 @@
 	<!-- bootstrap toggle -->
 	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/bootstrap-toggle.min.css" >
 
+	<!-- Data Tables -->
+	<!-- <link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/dataTables.min.css" > -->
+	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/dataTables.bootstrap4.min.css" >
 
 	<!-- ALERTIFY -->
 	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.min.css"/>
@@ -25,6 +28,7 @@
 
 	<!-- CSS : LOCAL -->
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/core.css" />
+	<!-- <link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/core-dataTables.css" /> -->
 
 {% for style in styles %}
 	<!-- CSS : CUSTOM -->
