--- a/themes/default/result/add.html
+++ b/themes/default/result/add.html
@@ -116,37 +116,57 @@
 
                         <div class="examresult-table mt-4">
 
-                            <table class="table table-hover table-responsive-md">
-                                
-                                <thead class="thead-dark">
-                                    <th width="1%" class="text-center" scope="col">ID</th>
-                                    <th width="1%" class="text-center" scope="col">Admission</th>
-                                    <th width="1%" class="text-center" scope="col">Class</th>
-                                    <th width="1%" class="text-center" scope="col">Index</th>
-                                    <th scope="col">Name</th>
-                                    <th scope="col">Exam Name</th>
-                                    <th scope="col">Subject</th>
-                                    <th width="1%" class="text-center" scope="col" colspan="2">Marks</th>
-                                    <!-- <th width="1%" class="text-center" scope="col">&nbsp;</th> -->
-                                </thead>
+                            {% if exam.schedules %}
+                                <table id="table_results_mark" class="table table-hover table-responsive-md">
+                                    <caption> Search Results of Students </caption>
 
-                                <tbody>
-                                    {% for exam_schedule in exam.schedules %}
-                                    <tr>
-                                        <th class="text-center" scope="row">{{ exam_schedule.id }}</th>
-                                        <td class="text-center">{{ exam_schedule.admission_no }}</td>
-                                        <td class="text-center">{{ exam_schedule.class }}</td>
-                                        <td class="text-center">{{ exam_schedule.index }}</td>
-                                        <td>{{ exam_schedule.name }}</td>
-                                        <td>{{ exam_schedule.exam_name }}</td>
-                                        <td>{{ exam_schedule.subject }}</td>
-                                        <td class="text-center">{{ exam_schedule.marks }}</td>
-                                        <td><button type="button" class="btn btn-xs btn-warning">Insert</button></td>
-                                    </tr>
-                                    {% endfor %}
-                                </tbody>
+                                    <thead class="thead-dark">
+                                        <tr>
+                                            <th width="1%" class="text-center" scope="col">ID</th>
+                                            <th width="1%" class="text-center" scope="col">Admission</th>
+                                            <th width="1%" class="text-center" scope="col">Class</th>
+                                            <th width="1%" class="text-center" scope="col">Index</th>
+                                            <th scope="col">Name</th>
+                                            <th scope="col">Exam Name</th>
+                                            <th scope="col">Subject</th>
+                                            <th width="1%" class="text-center" scope="col">Marks</th>
+                                            <th width="1%" class="text-center" scope="col">&nbsp;</th>
+                                        </tr>
+                                    </thead>
 
-                            </table>
+                                    <tbody>
+                                        {% for exam_schedule in exam.schedules %}
+                                        <tr>
+                                            <th class="text-center" scope="row">{{ exam_schedule.id }}</th>
+                                            <td class="text-center">{{ exam_schedule.admission_no }}</td>
+                                            <td class="text-center">{{ exam_schedule.class }}</td>
+                                            <td class="text-center">{{ exam_schedule.index }}</td>
+                                            <td>{{ exam_schedule.name }}</td>
+                                            <td>{{ exam_schedule.exam_name }}</td>
+                                            <td>{{ exam_schedule.subject }}</td>
+                                            <td class="text-center">{{ exam_schedule.marks }}</td>
+                                            <td><button type="button" class="btn btn-xs btn-warning">Insert</button></td>
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+
+                                </table>
+                            {% else %}
+                                <table class="table table-hover table-responsive-md">
+                                    <caption> Search Results of Students </caption>
+
+                                    <thead class="thead-dark">
+                                        <tr>
+                                            <th class="text-center" scope="col">Please Select an Exam to view its Schedule</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td class="text-center" scope="col">No records to display</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            {% endif %}
 
                         </div>
 
@@ -158,5 +178,12 @@
         </div>
     </div>
 
-{{ template.footer|raw }}
+    {{ template.footer|raw }}
+
+    <script>
+        // DATA TABLE
+        $(document).ready(function() {
+            $('#table_results_mark').DataTable();
+        } );
+    </script>
 </body>
