--- a/themes/default/exam/search.html
+++ b/themes/default/exam/search.html
@@ -105,10 +105,10 @@
                 <!-- START : EXAM SCHEDULE SEARCH RESULT -->
                 <section class="examschedule mt-3">
 
-                    <table class="table table-hover table-bordered table-responsive-md">
-                        <caption> Results of Exam Schedules </caption>
-                        <thead class="thead-dark">
-                            {% if exam.schedules %}
+                    {% if exam.schedules %}
+                        <table id="table_exam_search" class="table table-hover table-responsive-md">
+                            <caption> Results of Exam Schedules </caption>
+                            <thead class="thead-dark">
                                 <tr>
                                     <th width="20%" class="text-center" scope="col">Exam Name</th>
                                     <th width="8%" class="text-center" scope="col">Grade</th>
@@ -118,18 +118,11 @@
                                     <th width="8%" class="text-center" scope="col">Ends at</th>
                                     <th class="text-center" scope="col">Venue</th>
                                     <th class="text-center" scope="col">Instructions</th>
-                                    <th class="text-center" scope="col">&nbsp;</th>
-
+                                    <th width="12%" class="text-center" scope="col">&nbsp;</th>
                                 </tr>
-                            {% else %}
-                                <tr>
-                                    <th class="text-center" scope="col">Select a exam to view schedule</th>
-                                </tr>
-                            {% endif %}
-                        </thead>
+                            </thead>
 
-                        <tbody>
-                            {% if exam.schedules %}
+                            <tbody>
                                 {% for exam_schedule in exam.schedules %}
                                     <tr>
                                         <td class="text-center">{{ exam_schedule.exam_type_name }} - {{ exam_schedule.exam_year }}</td>
@@ -140,25 +133,33 @@
                                         <td class="text-center">{{ exam_schedule.ends }}</td>
                                         <td class="text-center">{{ exam_schedule.venue }}</td>
                                         <td class="text-center">{{ exam_schedule.instructions }}</td>
-                                        <td class="text-center">
-                                            <div class="row">
-                                                <div class="col-12 text-center">
-                                                    <span class="text-muted">Edit</span> | 
-                                                    <span class="text-muted">Remove</span>
+                                        <td>
+                                            <div class="col-12 text-center">
+                                                    <button class="btn btn-xs btn-warning">Edit</button>
+                                                    <button class="btn btn-xs btn-danger">Remove</button>
                                                 </div>
                                             </div>
                                         </td>
                                     </tr>
-                                 {% endfor %}
-                            {% else %}
+                                {% endfor %}
+                            </tbody>
+
+                        </table>
+                    {% else %}
+                        <table class="table table-hover table-responsive-md">
+                            <caption> Results of Exam Schedules </caption>
+                            <thead class="thead-dark">                            
+                                <tr>
+                                    <th class="text-center" scope="col">Select a exam to view schedule</th>
+                                </tr>
+                            </thead>
+                            <tbody>
                                 <tr>
                                     <td class="text-center" scope="row">No records to display</td>
                                 </tr>
-                            {% endif %}
-                        </tbody>
-
-                    </table>
-
+                            </tbody>
+                        </table>
+                    {% endif %}
                 </section>
                  <!-- END : EXAM SCHEDULE SEARCH RESULT -->
 
@@ -181,7 +182,7 @@
                 <form>
                     <div class="modal-body">
 
-                        <table class="table table-hover table-responsive-md">
+                        <table id="modal-exams" class="table table-hover table-responsive-md">
 
                             <thead class="thead-dark">
                                 <tr>
@@ -200,9 +201,13 @@
                                         <td>{{ exam.type.name }} - {{ exam.year }}</td>
                                         <td>{{ exam.venue }}</td>
                                         <td>{{ exam.instructions }}</td>
-                                        <td class="text-center">
-                                            <button type="button" class="btn btn-xs btn-warning" onclick="exam.edit({{ exam.id }});" >edit</button> 
-                                            <button type="button" class="btn btn-xs btn-danger" onclick="exam.remove({{ exam.id }});">remove</button> 
+                                        <td>
+                                            <div class="row">
+                                                <div class="col-12 text-center">
+                                                    <button class="btn btn-xs btn-warning">Edit</button>
+                                                    <button class="btn btn-xs btn-danger">Remove</button>
+                                                </div>
+                                            </div>
                                         </td>
                                     </tr>
                                 {% endfor %}
@@ -286,6 +291,11 @@
             }
         }
         // END : SCRIPT FOR REMOVE EXAM 
+
+        // DATA TABLE
+        $(document).ready(function() {
+            $('#table_exam_search').DataTable();
+        } );
     
     </script>
 </body>
