--- a/themes/default/sport/search_coach.html
+++ b/themes/default/sport/search_coach.html
@@ -85,7 +85,7 @@
                     <section class="mt-5">
                         <!-- START : SEARCH RESULT TABLE -->
                         {% if coaches %}
-                            <table class="table table-bordered table-responsive-md">
+                            <table id="table_sport_search_coach" class="table table-hover table-responsive-md">
                                 <caption> Search Results of Coaches </caption>
                                 <thead class="thead-dark">
                                     <tr>
@@ -97,7 +97,7 @@
                                         <th width="5%" class="text-center" scope="col">Email</th>
                                         <th width="10%" class="text-center" scope="col">Mobile Number</th>
                                         <th width="10%" class="text-center" scope="col">City</th>                       
-                                        <th width="12%" class="text-center" scope="col">&nbsp;</th>
+                                        <th width="10%" class="text-center" scope="col">&nbsp;</th>
                                     </tr>
                                 </thead>
 
@@ -112,8 +112,7 @@
                                             <td class="text-center">{{ coach.email }}</td>
                                             <td class="text-center">{{ coach.phone_mobile }}</td>
                                             <td class="text-center">{{ coach.city }}</td>
-                                                                                    
-                                            <td class="text-center"><i class="la la-user"></i> View Profile</td>
+                                            <td class="text-center"><button type="button" class="btn btn-xs btn-success"><i class="la la-user"></i>View Profile</button></td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
@@ -146,5 +145,14 @@
         </div>
     </div>
 
-{{ template.footer|raw }}
+    {{ template.footer|raw }}
+
+    <script>
+
+        // DATA TABLE
+        $(document).ready(function() {
+            $('#table_sport_search_coach').DataTable();
+        } );
+
+    </script>
 </body>
