--- a/themes/default/sport/search_student.html
+++ b/themes/default/sport/search_student.html
@@ -117,18 +117,18 @@
                     <section class="mt-5">
                         <!-- START : SEARCH RESULT TABLE -->
                         {% if students %}
-                            <table class="table table-bordered table-responsive-md">
+                            <table id="table_sport_search_student" class="table table-hover table-responsive-md">
                                 <caption> Search Results of Students </caption>
                                 <thead class="thead-dark">
                                     <tr>
                                         <th width="1%" class="text-center" scope="col">ID</th>
-                                        <th width="10%" class="text-center" scope="col">Admission</th>
+                                        <th width="1%" class="text-center" scope="col">Admission</th>
                                         <th width="1%" class="text-center" scope="col">Class</th>
-                                        <th width="10%" class="text-center" scope="col">DoB</th>
+                                        <th width="8%" class="text-center" scope="col">DoB</th>
                                         <th width="5%" class="text-center" scope="col">Gender</th>
-                                        <th width="10%" class="text-center" scope="col">City</th>
-                                        <th scope="col">Name</th>                                    
-                                        <th width="15%" class="text-center" scope="col">&nbsp;</th>
+                                        <th scope="col">Name</th>
+                                        <th scope="col">Sports</th>
+                                        <th width="12%" class="text-center" scope="col">&nbsp;</th>
                                     </tr>
                                 </thead>
 
@@ -140,9 +140,17 @@
                                             <td class="text-center">{{ student.class }}</td>
                                             <td class="text-center">{{ student.dob }}</td>
                                             <td class="text-center">{{ student.gender }}</td>
-                                            <td class="text-center">{{ student.city }}</td>
-                                            <td> {{ student.name }}</td>                                        
-                                            <td class="text-center"><i class="la la-user"></i> View Profile</td>
+                                            <td> {{ student.name }}</td>
+                                            <td>sports</td>
+                                            <td>
+                                                <div class="row">
+                                                    <div class="col-12 text-center">
+                                                        <button class="btn btn-xs btn-warning">Edit</button>
+                                                        <button class="btn btn-xs btn-danger">Remove</button>
+                                                        <button class="btn btn-xs btn-success mt-1"><i class="la la-user"></i>View Profile</button>
+                                                    </div>
+                                                </div>
+                                            </td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
@@ -175,5 +183,14 @@
         </div>
     </div>
 
-{{ template.footer|raw }}
+    {{ template.footer|raw }}
+
+    <script>
+
+        // DATA TABLE
+        $(document).ready(function() {
+            $('#table_sport_search_student').DataTable();
+        } );
+    
+    </script>
 </body>
