--- a/themes/default/result/add.html
+++ b/themes/default/result/add.html
@@ -145,7 +145,7 @@
                                             <td>{{ exam_schedule.exam_name }}</td>
                                             <td>{{ exam_schedule.subject }}</td>
                                             <td class="text-center">{{ exam_schedule.marks }}</td>
-                                            <td><button type="button" class="btn btn-xs btn-warning">Insert</button></td>
+                                            <td><button type="button" class="btn btn-sm btn-warning">Insert</button></td>
                                         </tr>
                                         {% endfor %}
                                     </tbody>
