staff/search ui finished

--- a/themes/default/student/search.html
+++ b/themes/default/student/search.html
@@ -17,9 +17,7 @@
 
                     <!-- START : SEARCH STUDENT FORM -->
                     <div class="card mt-4">
-                        <div class="card-header">
-                            Search
-                        </div>
+                        <div class="card-header">Search</div>
                         <div class="card-body">
                             <form method="post">
                                 <div class="form-row">
