exam/add form clear

--- a/themes/default/user/add.html
+++ b/themes/default/user/add.html
@@ -14,9 +14,9 @@
                 <div class="container">
                     <div class="row">
 
-                        <div class="col-md-8 mt-4 mx-auto">
+                        <div class="col-md-8 mt-5 mx-auto">
                             <div class="card">
-                                <div class="card-header" style="background-color: #8f75da; color: #FFFFFF;">ADD NEW USER</div>
+                                <div class="card-header">Add new User</div>
                                 <div class="card-body">
 
                                     <form>
