alertify semantic theme added

--- a/themes/default/common/header.html
+++ b/themes/default/common/header.html
@@ -14,17 +14,22 @@
 	<!-- TEMPUS DOMINUS DATETIME PICKER -->
 	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/tempusdominus-bootstrap-4.min.css" />
 
-	<!-- bootstrap toggle -->
-	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/bootstrap-toggle.min.css" >
+	<!-- BOOTSTRAP TOGGLE -->
+	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/bootstrap-toggle.min.css" />
 
-	<!-- Data Tables -->
+	<!-- BOOTSTRAP SELECT -->
+	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/bootstrap-select.min.css" />
+
+	<!-- DATA TABLES -->
 	<!-- <link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/dataTables.min.css" > -->
-	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/dataTables.bootstrap4.min.css" >
+	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/dataTables.bootstrap4.min.css" />
 
 	<!-- ALERTIFY -->
-	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.min.css"/>
-	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.default.min.css"/>
-	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/bootstrap-select.min.css" />
+	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.min.css" />
+	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.default.min.css" />
+	<link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.semantic.min.css" />
+	<!-- <link rel="stylesheet" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/alertify.bootstrap.min.css" /> -->
+	
 
 	<!-- CSS : LOCAL -->
 	<link rel="stylesheet" type="text/css" href="{{ app.url }}/themes/{{ app.theme }}/assets/css/core.css" />
